Add data scaler and start random forest ensemble

--- a/SongsAnalysis.ipynb
+++ b/SongsAnalysis.ipynb
@@ -41,9 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Gerri Fox\\Desktop\\junior-college\\Machine Learning\\final_project\\Top-Charts-Song-Classification\\SongsAnalysis.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gerri%20Fox/Desktop/junior-college/Machine%20Learning/final_project/Top-Charts-Song-Classification/SongsAnalysis.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gerri%20Fox/Desktop/junior-college/Machine%20Learning/final_project/Top-Charts-Song-Classification/SongsAnalysis.ipynb#ch0000005?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Gerri%20Fox/Desktop/junior-college/Machine%20Learning/final_project/Top-Charts-Song-Classification/SongsAnalysis.ipynb#ch0000005?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gerri%20Fox/Desktop/junior-college/Machine%20Learning/final_project/Top-Charts-Song-Classification/SongsAnalysis.ipynb#ch0000005?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Gerri%20Fox/Desktop/junior-college/Machine%20Learning/final_project/Top-Charts-Song-Classification/SongsAnalysis.ipynb#ch0000005?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -51,7 +63,10 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from spotipy import Spotify, oauth2\n",
-    "import secret"
+    "import secret\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -2370,8 +2385,33 @@
     "\n",
     "    del cleaned_song_data['track_id']\n",
     "\n",
+    "    # scale data \n",
+    "    \n",
+    "\n",
     "    return cleaned_song_data\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scale_train_test_x(train, test, scaler = None):\n",
+    "    '''\n",
+    "    Standardizes the given train and test data.\n",
+    "    Returns the scaled train and test data\n",
+    "    :param train: the training data to scale\n",
+    "    :param test: the testing data to scale\n",
+    "    :param scaler: the scaler to use to standardize, else default is StandardScaler\n",
+    "    '''\n",
+    "    if scaler is None:\n",
+    "        scaler = StandardScaler()\n",
+    "    scaler.fit(train)\n",
+    "    train = scaler.transform(train)\n",
+    "    test = scaler.transform(test)\n",
+    "    return train, test"
    ]
   },
   {
@@ -2383,6 +2423,7 @@
     "def split_data(cleaned_song_data):\n",
     "    \"\"\"\n",
     "    Splits the training data into a 75%/25% split with the 25% allotted for testing\n",
+    "    Scales the training data before using it to fit models\n",
     "    Returns the data split into x_train, x_test, y_train and y_test\n",
     "    :param cleaned_song_data: the cleaned DataFrame object \n",
     "    \"\"\"\n",
@@ -2393,6 +2434,7 @@
     "    x_test = x_test.reset_index(drop=True)\n",
     "    y_train = y_train.reset_index(drop=True)\n",
     "    y_test = y_test.reset_index(drop=True)\n",
+    "    x_train, y_train = scale_train_test_x(x_train, x_test)\n",
     "    return x_train, x_test, y_train, y_test"
    ]
   },
@@ -3122,6 +3164,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_model(model, x):\n",
+    "    '''\n",
+    "    Predicts the y values for the given x values using the given model.\n",
+    "    Returns the Y predictions\n",
+    "    :param model: the trained model to use for our prediction\n",
+    "    :param x: x data to get y predictions for\n",
+    "    '''\n",
+    "    y_pred = model.predict(x);\n",
+    "    return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_random_forest(x_train, y_train):\n",
+    "    '''\n",
+    "    Trains a random forest classifier ensemble using the given x and y training data\n",
+    "    Returns the trained random forest model\n",
+    "    :param x_train: the x data to train our random forest model on\n",
+    "    :param y_train: the y data to train our random forest model on\n",
+    "    '''\n",
+    "    rfc = RandomForestClassifier()\n",
+    "    rfc.fit(x_train, y_train)\n",
+    "    return rfc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metrics(y_true, y_pred):\n",
+    "    '''\n",
+    "    Gets evaluation metrics confusion matrix, classification report and accuracy sore\n",
+    "    for the given y true and y predicted values.\n",
+    "    Returns the confusion matrix, the classification report, and the accuracy score\n",
+    "    :param y_true: the true y data \n",
+    "    :param y_pred: the y data predicted by the model\n",
+    "    '''\n",
+    "    conf_matrix = confusion_matrix(y_true,y_pred)\n",
+    "    class_report = classification_report(y_true,y_pred)\n",
+    "    accuracy = accuracy_score(y_true,y_pred)\n",
+    "    return conf_matrix, class_report, accuracy\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3148,7 +3254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
