Add calls to get data

--- a/SongsAnalysis.ipynb
+++ b/SongsAnalysis.ipynb
@@ -1273,6 +1273,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Split data to be used for training / testing for each model\n",
+    "unedited_song_data = import_data()\n",
+    "cleaned_song_data = clean_data(unedited_song_data)\n",
+    "x_train, x_test, y_train, y_test = split_data(cleaned_song_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
