add svm classifier

--- a/SongsAnalysis.ipynb
+++ b/SongsAnalysis.ipynb
@@ -1466,11 +1466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_metrics(model, x_test, y_true, y_pred):\n",
+    "def get_metrics(y_true, y_pred):\n",
     "    '''\n",
     "    Gets evaluation metrics confusion matrix, classification report, accuracy sore, precision score,\n",
     "    recall score, f1 score and auc score\n",
@@ -1488,8 +1488,7 @@
     "    precision = precision_score(y_true, y_pred)\n",
     "    recall = recall_score(y_true, y_pred)\n",
     "    f1_sc = f1_score(y_true, y_pred)\n",
-    "    y_pred_proba = model.predict_proba(x_test)[::,1]\n",
-    "    auc = roc_auc_score(y_true, y_pred_proba)\n",
+    "    auc = roc_auc_score(y_true, y_pred)\n",
     "    return conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc\n",
     "\n",
     "    "
@@ -1507,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1520,7 @@
     "\n",
     "        y_pred = predict_model(fit_cl, x_test)\n",
     "\n",
-    "        conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc = get_metrics(fit_cl, x_test, y_test, y_pred)\n",
+    "        conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc = get_metrics(y_test, y_pred)\n",
     "\n",
     "        metrics_test.append({\n",
     "            '# Trees': ne,\n",
@@ -1534,6 +1533,30 @@
     "    \n",
     "    return pd.DataFrame(metrics_test).set_index('# Trees')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_nonensemble_classifiers(classifier, kernel='rbf'):\n",
+    "    fit_cl = fit_classifier(classifier, x_train, y_train, kernel=kernel)\n",
+    "    y_pred = predict_model(fit_cl, x_test)\n",
+    "    conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc = get_metrics(y_test, y_pred)\n",
+    "    \n",
+    "    print('{} Classifier Metrics - Test Set'.format(classifier))\n",
+    "    tn, fp, fn, tp = conf_matrix.ravel()\n",
+    "    print('\\n\\nConfusion matrix:')\n",
+    "    print(conf_matrix)\n",
+    "    print(f'\\n\\nTrue Positives: {tp}, False Positives: {fp}, False Negatives: {fn}, True Negatives: {tn}\\n')\n",
+    "    \n",
+    "    metrics = { 'Accuracy': [accuracy], 'Error': [1-accuracy], 'Precision': [precision], 'Recall': [recall], 'F1 Score':[f1_sc], 'AUC':[auc]}\n",
+    "    metrics_train = pd.DataFrame.from_dict(metrics)\n",
+    "    print(f'Metrics for package {classifier} on the training set:\\n\\n{metrics_train}')\n",
+    "    \n",
+    "    return fit_cl"
    ]
   },
   {
@@ -3528,60 +3551,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logr_clf = fit_classifier('LogisticRegression', x_train, y_train)\n",
-    "y_pred = predict_model(logr_clf, x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc = get_metrics(logr_clf, x_test, y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Classifier Metrics - Test Set\n",
-      "Confusion matrix:\n",
+      "LogisticRegression Classifier Metrics - Test Set\n",
       "\n",
-      " [[3745  594]\n",
+      "\n",
+      " Confusion matrix:\n",
+      "[[3745  594]\n",
       " [ 419 3927]]\n",
       "\n",
-      "True Positives: 3927, false positives: 594, false negatives: 419, true negatives: 3745\n",
       "\n",
-      "Metrics for package Logistic Regression on the training set:\n",
+      " True Positives: 3927, False Positives: 594, False Negatives: 419, True Negatives: 3745\n",
       "\n",
-      "   accuracy     error  precision   recall  f1_score       auc\n",
-      "0  0.883362  0.116638   0.868613  0.90359  0.885756  0.947244\n"
+      "Metrics for package LogisticRegression on the training set:\n",
+      "\n",
+      "   Accuracy     Error  Precision   Recall  F1 Score       AUC\n",
+      "0  0.883362  0.116638   0.868613  0.90359  0.885756  0.883346\n"
      ]
     }
    ],
    "source": [
-    "print('Logistic Regression Classifier Metrics - Test Set')\n",
-    "tn, fp, fn, tp = conf_matrix.ravel()\n",
-    "print(f'Confusion matrix:\\n\\n {conf_matrix}\\n')\n",
-    "print(f'True Positives: {tp}, false positives: {fp}, false negatives: {fn}, true negatives: {tn}\\n')\n",
-    "metrics = { 'accuracy': [accuracy], 'error': [1-accuracy], 'precision': [precision], 'recall': [recall], 'f1_score':[f1_sc], 'auc':[auc]}\n",
-    "log_reg_metrics_train = pd.DataFrame.from_dict(metrics)\n",
-    "print(f'Metrics for package Logistic Regression on the training set:\\n\\n{log_reg_metrics_train}')"
+    "logr_clf = run_nonensemble_classifiers('LogisticRegression')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -3600,7 +3600,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [220]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m coefs \u001b[38;5;241m=\u001b[39m logr_clf\u001b[38;5;241m.\u001b[39mcoef_\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLogistic Regression Coefficients:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe features that contribute the most are those with the largest absolute values. The most positively correlated features is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcols[np\u001b[38;5;241m.\u001b[39mwhere(coefs \u001b[38;5;241m==\u001b[39m coefs\u001b[38;5;241m.\u001b[39mmax())[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, and the most negatively correlated features is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcols[np\u001b[38;5;241m.\u001b[39mwhere(coefs \u001b[38;5;241m==\u001b[39m coefs\u001b[38;5;241m.\u001b[39mmin())[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "Input \u001b[0;32mIn [239]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m coefs \u001b[38;5;241m=\u001b[39m logr_clf\u001b[38;5;241m.\u001b[39mcoef_\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLogistic Regression Coefficients:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe features that contribute the most are those with the largest absolute values. The most positively correlated features is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcols[np\u001b[38;5;241m.\u001b[39mwhere(coefs \u001b[38;5;241m==\u001b[39m coefs\u001b[38;5;241m.\u001b[39mmax())[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, and the most negatively correlated features is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcols[np\u001b[38;5;241m.\u001b[39mwhere(coefs \u001b[38;5;241m==\u001b[39m coefs\u001b[38;5;241m.\u001b[39mmin())[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'cols' is not defined"
      ]
     }
@@ -3608,12 +3608,13 @@
    "source": [
     "coefs = logr_clf.coef_\n",
     "print(f'Logistic Regression Coefficients:\\n {coefs}')\n",
-    "f'The features that contribute the most are those with the largest absolute values. The most positively correlated features is {cols[np.where(coefs == coefs.max())[1][0]]} of {coefs.max()}, and the most negatively correlated features is {cols[np.where(coefs == coefs.min())[1][0]]} of {coefs.min()}.'"
+    "f'The features that contribute the most are those with the largest absolute values. The most positively correlated features is {cols[np.where(coefs == coefs.max())[1][0]]} of {coefs.max()}, and the most negatively correlated features is {cols[np.where(coefs == coefs.min())[1][0]]} of {coefs.min()}.'\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -3637,15 +3638,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>error</th>\n",
-       "      <th>precision</th>\n",
-       "      <th>recall</th>\n",
-       "      <th>f1_score</th>\n",
-       "      <th>auc</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Error</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1 Score</th>\n",
+       "      <th>AUC</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>threshold</th>\n",
+       "      <th>Threshold</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -3662,7 +3663,7 @@
        "      <td>0.803282</td>\n",
        "      <td>0.957432</td>\n",
        "      <td>0.873609</td>\n",
-       "      <td>0.947244</td>\n",
+       "      <td>0.861293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.50</th>\n",
@@ -3671,7 +3672,7 @@
        "      <td>0.868613</td>\n",
        "      <td>0.903590</td>\n",
        "      <td>0.885756</td>\n",
-       "      <td>0.947244</td>\n",
+       "      <td>0.883346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.75</th>\n",
@@ -3680,7 +3681,7 @@
        "      <td>0.919293</td>\n",
        "      <td>0.778417</td>\n",
        "      <td>0.843010</td>\n",
-       "      <td>0.947244</td>\n",
+       "      <td>0.854984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.90</th>\n",
@@ -3689,22 +3690,22 @@
        "      <td>0.957455</td>\n",
        "      <td>0.554073</td>\n",
        "      <td>0.701938</td>\n",
-       "      <td>0.947244</td>\n",
+       "      <td>0.764706</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           accuracy     error  precision    recall  f1_score       auc\n",
-       "threshold                                                             \n",
-       "0.25       0.861370  0.138630   0.803282  0.957432  0.873609  0.947244\n",
-       "0.50       0.883362  0.116638   0.868613  0.903590  0.885756  0.947244\n",
-       "0.75       0.854922  0.145078   0.919293  0.778417  0.843010  0.947244\n",
-       "0.90       0.764537  0.235463   0.957455  0.554073  0.701938  0.947244"
+       "           Accuracy     Error  Precision    Recall  F1 Score       AUC\n",
+       "Threshold                                                             \n",
+       "0.25       0.861370  0.138630   0.803282  0.957432  0.873609  0.861293\n",
+       "0.50       0.883362  0.116638   0.868613  0.903590  0.885756  0.883346\n",
+       "0.75       0.854922  0.145078   0.919293  0.778417  0.843010  0.854984\n",
+       "0.90       0.764537  0.235463   0.957455  0.554073  0.701938  0.764706"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3720,16 +3721,16 @@
     "aucs = []\n",
     "for threshold in thresholds:\n",
     "    y_pred = (logr_clf.predict_proba(x_test)[:,1]>=threshold).astype(int)\n",
-    "    conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc = get_metrics(logr_clf, x_test, y_test, y_pred)\n",
+    "    conf_matrix, class_report, accuracy, precision, recall, f1_sc, auc = get_metrics(y_test, y_pred)\n",
     "    accuracies.append(accuracy)\n",
     "    errors.append(1-accuracy)\n",
     "    precisions.append(precision)\n",
     "    recalls.append(recall)\n",
     "    f1_scs.append(f1_sc)\n",
     "    aucs.append(auc)\n",
-    "metrics = { 'threshold': thresholds, 'accuracy': accuracies, 'error': errors, 'precision': precisions, 'recall': recalls, 'f1_score':f1_scs, 'auc':aucs}\n",
+    "metrics = { 'Threshold': thresholds, 'Accuracy': accuracies, 'Error': errors, 'Precision': precisions, 'Recall': recalls, 'F1 Score':f1_scs, 'AUC':aucs}\n",
     "metrics = pd.DataFrame.from_dict(metrics)\n",
-    "metrics.set_index('threshold')"
+    "metrics.set_index('Threshold')"
    ]
   },
   {
@@ -3740,11 +3741,78 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Nonlinear Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC Classifier Metrics - Test Set\n",
+      "\n",
+      "\n",
+      " Confusion matrix:\n",
+      "[[3870  469]\n",
+      " [ 286 4060]]\n",
+      "\n",
+      "\n",
+      " True Positives: 4060, False Positives: 469, False Negatives: 286, True Negatives: 3870\n",
+      "\n",
+      "Metrics for package SVC on the training set:\n",
+      "\n",
+      "   Accuracy     Error  Precision    Recall  F1 Score       AUC\n",
+      "0  0.913069  0.086931   0.896445  0.934192   0.91493  0.913051\n"
+     ]
+    }
+   ],
+   "source": [
+    "svc_cl = run_nonensemble_classifiers('SVC')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC Classifier Metrics - Test Set\n",
+      "\n",
+      "\n",
+      " Confusion matrix:\n",
+      "[[3728  611]\n",
+      " [ 394 3952]]\n",
+      "\n",
+      "\n",
+      " True Positives: 3952, False Positives: 611, False Negatives: 394, True Negatives: 3728\n",
+      "\n",
+      "Metrics for package SVC on the training set:\n",
+      "\n",
+      "   Accuracy     Error  Precision    Recall  F1 Score       AUC\n",
+      "0  0.884283  0.115717   0.866097  0.909342  0.887193  0.884263\n"
+     ]
+    }
+   ],
+   "source": [
+    "svc_cl = run_nonensemble_classifiers('SVC', kernel='linear')"
+   ]
   }
  ],
  "metadata": {
