--- a/SongsAnalysis.ipynb
+++ b/SongsAnalysis.ipynb
@@ -3581,7 +3581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -3594,21 +3594,21 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'cols' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [239]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m coefs \u001b[38;5;241m=\u001b[39m logr_clf\u001b[38;5;241m.\u001b[39mcoef_\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLogistic Regression Coefficients:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe features that contribute the most are those with the largest absolute values. The most positively correlated features is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcols[np\u001b[38;5;241m.\u001b[39mwhere(coefs \u001b[38;5;241m==\u001b[39m coefs\u001b[38;5;241m.\u001b[39mmax())[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, and the most negatively correlated features is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcols[np\u001b[38;5;241m.\u001b[39mwhere(coefs \u001b[38;5;241m==\u001b[39m coefs\u001b[38;5;241m.\u001b[39mmin())[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcoefs\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cols' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'The features that contribute the most are those with the largest absolute values. The most positively correlated features is artist_popularity of 2.1256606600756793, and the most negatively correlated features is instrumentalness of -1.2165984776832128.'"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "coefs = logr_clf.coef_\n",
+    "features = cleaned_song_data.drop(columns=['On_chart'])\n",
     "print(f'Logistic Regression Coefficients:\\n {coefs}')\n",
-    "f'The features that contribute the most are those with the largest absolute values. The most positively correlated features is {cols[np.where(coefs == coefs.max())[1][0]]} of {coefs.max()}, and the most negatively correlated features is {cols[np.where(coefs == coefs.min())[1][0]]} of {coefs.min()}.'\n",
+    "f'The features that contribute the most are those with the largest absolute values. The most positively correlated features is {features.columns[np.where(coefs == coefs.max())[1][0]]} of {coefs.max()}, and the most negatively correlated features is {features.columns[np.where(coefs == coefs.min())[1][0]]} of {coefs.min()}.'\n",
     "\n"
    ]
   },
