clean up headers

--- a/SongsAnalysis.ipynb
+++ b/SongsAnalysis.ipynb
@@ -11,25 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outline\n",
-    "1. <a href='#1'>Introduction</a>\n",
-    "2. <a href='#2'>Dataset Setup</a>\n",
-    "3. <a href='#3'>Results</a>\n",
-    "4. <a href='#4'>Discussion</a>"
+    "#### DS 4400\n",
+    "#### By Gerri Fox & Sumana Sithalam"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Dataset Setup"
+    "### Dataset Setup"
    ]
   },
   {
@@ -278,8 +268,8 @@
     "# the spotify_api_[number] instance will have a field called artist_popularity which will be\n",
     "# the dataframe with the resulting artist popularities after making the api calls\n",
     "\n",
-    "# process_dataset_portion(0)\n",
-    "# spotify_api_0.artist_popularity"
+    "process_dataset_portion(0)\n",
+    "spotify_api_0.artist_popularity"
    ]
   },
   {
@@ -288,8 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# process_dataset_portion(1)\n",
-    "# spotify_api_1.artist_popularity"
+    "process_dataset_portion(1)\n",
+    "spotify_api_1.artist_popularity"
    ]
   },
   {
@@ -298,8 +288,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# process_dataset_portion(2)\n",
-    "# spotify_api_2.artist_popularity"
+    "process_dataset_portion(2)\n",
+    "spotify_api_2.artist_popularity"
    ]
   },
   {
@@ -308,8 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# process_dataset_portion(3)\n",
-    "# spotify_api_3.artist_popularity"
+    "process_dataset_portion(3)\n",
+    "spotify_api_3.artist_popularity"
    ]
   },
   {
@@ -318,8 +308,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# process_dataset_portion(4)\n",
-    "# spotify_api_4.artist_popularity"
+    "process_dataset_portion(4)\n",
+    "spotify_api_4.artist_popularity"
    ]
   },
   {
@@ -495,7 +485,7 @@
    "cell_type": "code",
    "execution_count": 161,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3827,7 +3817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Metrics"
+    "## All Model Metrics"
    ]
   },
   {
